feat: Manejo de errores en peticiones